# knowledge-graph-rag-citations

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  requirements.txt
backend/samples/: amazon.txt  apple_inc.txt  google.txt  meta.txt  microsoft.txt  tesla.txt
backend/src/: api.py  config.py  embeddings.py  ingest.py  llm.py  retrieval.py  state.py
backend/src/agents/: extractor.py  synthesizer.py  verifier.py
backend/src/graph/: __init__.py
backend/src/vector/: __init__.py
docker/: web.Dockerfile
eval/: run_eval.py  test_cases.json
tests/: test_backend.py
