[project]
name = "knowledge-graph-rag-citations"
version = "0.1.0"
description = "Multi-hop knowledge graph RAG with verifiable span-level citations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",
    "pydantic==2.9.0",
    "python-dotenv==1.0.1",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-ollama==0.3.0",
    "neo4j==5.25.0",
    "sqlalchemy==2.0.35",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "pgvector==0.3.5",
    "pymupdf==1.24.10",
    "requests==2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
